implemented QueryBuilder, implemented and tested Service, implemented proper AND functionality #32
Service has validation methods to prevent sql injection